# my-programming-language

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: functions.cmake  main.cmake
examples/: example1.sk
skarn/: CMakeLists.txt
skarnc/: CMakeLists.txt
skarnc/src/: InvocableTraits.h  TypeName.h  TypePack.h  TypeTraits.h
skarnc/src/ast/: Expression.h  Function.h  Import.h  Parser.h  Statement.h  Types.h  Unit.h
skarnc/src/lexer/: Lexer.cpp  Lexer.h
skarnc/src/parser/: Parser.h  ParserInterface.h  ParserMessage.h
skarnc/src/parser/details/: CharParser.h  CharPredicateParser.h  CombinedParser.h  Concepts.h  ConstantParser.h  ElemParser.h  ExpectedParser.h  IgnoreParser.h  IntParser.h  LiteralParser.h  OptionalParser.h  ParserContext.h  ReferenceParser.h  SequenceParser.h  TransformParser.h  ValueParser.h  VariantParser.h
skarnc/test/: InvocableTraitsTests.cpp  TypePackTests.cpp
skarnc/test/ast/: AstParserTests.cpp
skarnc/test/lexer/: LexerTests.cpp
skarnc/test/parser/: CharParserTests.cpp  CharPredicateParserTests.cpp  CombinedParserTests.cpp  ConstantParserTests.cpp  ExpectedParserTests.cpp  IntParserTests.cpp  LiteralParserTests.cpp  OptionalParserTests.cpp  ParserTests.cpp  ReferenceParserTests.cpp  SequenceParserTests.cpp  TransformParserTests.cpp  ValueParserTests.cpp  VariantParserTests.cpp
